Traffic-Management/broken-deployment.yaml
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v2
  labels:
    app: reviews-v2
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-v2
      version: v2
  template:
    metadata:
      labels:
        app: reviews-v2
        version: v2
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews-v2
        image: docker.io/istio/examples-bookinfo-reviews-v2:1.15.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        command: ["/bin/sh","-c"]
        args: ["timeout --signal=SIGINT 5 /opt/ibm/wlp/bin/server run defaultServer"]
