Traffic-Management/nsm-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-v3
  labels:
    app: reviews-v3
    service: reviews-v3
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews-v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v3
  labels:
    app: reviews-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-v3
  template:
    metadata:
      labels:
        app: reviews-v3
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews-v3
        image: docker.io/istio/examples-bookinfo-reviews-v3:1.15.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
