Traffic-Management/nsm-circuit-breaker.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-backup
  labels:
    app: reviews-backup
    service: reviews-backup
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews-v1
